surefire plugin in pom.xml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,10 @@ test:unit:
   artifacts:
     paths:
       - target/jacoco-ut/jacoco.xml
+    reports:
+      junit:
+        - target/surefire-reports/TEST-*.xml
+
 
 #
 # ----------------------------------------------------------------------
