--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
+					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
