deployment  in yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,3 +81,4 @@ release:tagnpush:
 # finally, lets deploy!
 # gitlab deployments textbook example https://docs.gitlab.com/ee/ci/ssh_keys/
 
+deploy prep: {extends: .prep}
