--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port = 8252
+#Default server port
+#server.port = 8080
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
@@ -6,9 +7,14 @@ spring.datasource.hikari.maximumPoolSize=5
 
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/stellenausschreibung
+spring.datasource.url=jdbc:postgresql://localhost:5432/stellenausschreibung?useSSL=false
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.jpa.show-sql=true
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
