Thymeleafs templating, data transfer internal + new endpoints for downloading

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Default server port
 #server.port = 8080
-
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.thymeleaf.cache=false
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
