Anpassung an Schnittstellenbeschreibung

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Default server port
-#server.port = 8080
+server.port = 8081
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.thymeleaf.cache=false
 ## default connection pool
